# camera_geometry

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  _clang-format  cg.ipynb  cg.py  conda_requirements.txt  pyproject.toml  readme.md  setup.py
.github/workflows/: cmake-multi-platform.yml  rust.yml
cg/: camera_parameters.py  eucm.py  math3d.py  proj_cv.py  proj_jax.py  proj_mlx.py  proj_nb.py  proj_np.py  project_points.py  render.py  vis.py
cg_rustpy/: proj_rs.py
cpp/: CMakeLists.txt  _clang-format
cpp/cmake/: configure_highway.cmake
cpp/scripts/: build_vs2019.ps1  build_vs2022.ps1  build_vs2026.ps1  generate_vs_solution.ps1
cpp/src/: CMakeLists.txt  cg_cuda.h  cg_scalar.cpp  cg_scalar.h  cg_simd.cpp  cg_simd.h  cg_types.h  geometry3d.cpp  geometry3d.h  imageio.cpp  imageio.h  main.cc  scoped_timer.cpp  scoped_timer.hpp  vector_add.cu
cpp/src/cuda/: gpu.cu  gpu.hpp  project_points.cu
cpp/tests/: CMakeLists.txt  main.cpp  tests_cg_scalar.cpp  tests_geometry3d.cpp  tests_scoped_timer.cpp
julia/: project_points.jl
rust/: Cargo.toml
rust/src/: lib.rs
samples/: cg.ipynb
tests/: test_camera_parameters.py  test_project_points.py
