[project]
name = "camera_geometry"
version = "0.0.1"
description = "Minimal camera geometry utilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "sevas" }]
license = "MIT"
keywords = ["camera", "geometry"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "numpy",
    "opencv-python",
    "plyfile",
    "numba",
 ]



[project.optional-dependencies]
mlx = ["mlx"]
dev = ["ruff", "pytest", "pytest-benchmark", "jupyterlab"]
vis = ["pyqtgraph", "pyside6", "pyopengl"]
jax = ["jax"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120


[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.pixi.workspace]
name = "camera_geometry"
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.dependencies]
numpy = "*"
py-opencv = "*"
plyfile = "*"
numba = "*"
pytest = "*"
pytest-benchmark = "*"
ruff = "*"
pyqtgraph = "*"
pyside6 = "*"
pyopengl = "*"


[tool.pixi.pypi-dependencies]
camera_geometry = { path = ".", editable = true }
jax = "*"


[tool.pixi.tasks]
tests = "python -m pytest -v tests"


#[tool.pixi.environments.osx.dependencies]
#mlx = "*"

